--- a/PHP/.php_cs.dist
+++ b/PHP/.php_cs.dist
@@ -1,13 +1,23 @@
 <?php
 
-$finder = PhpCsFixer\Finder::create()
-    ->exclude('node_modules')
-    ->exclude('public/hot')
-    ->exclude('public/storage')
-    ->exclude('storage')
-    ->exclude('vendor')
-    ->exclude('bootstrap/cache')
-    ->in(__DIR__)
+/**
+ * @see https://github.com/matt-allan/laravel-code-style/blob/main/src/Dev/GenerateRules.php
+ * @see https://gist.github.com/laravel-shift/cab527923ed2a109dda047b97d53c200
+ * @see https://mlocati.github.io/php-cs-fixer-configurator/
+ */
+
+use PhpCsFixer\Config;
+use PhpCsFixer\Finder;
+
+$finder = Finder::create()
+    ->in([
+        __DIR__ . '/app',
+        __DIR__ . '/config',
+        __DIR__ . '/database',
+        __DIR__ . '/resources',
+        __DIR__ . '/routes',
+        __DIR__ . '/tests',
+    ])
     ->name('*.php')
     ->notName('*.blade.php')
     ->ignoreDotFiles(true)
@@ -17,31 +27,13 @@ $finder = PhpCsFixer\Finder::create()
 // https://github.com/FriendsOfPHP/PHP-CS-Fixer/issues/4502#issuecomment-570408101
 
 $psr12Rules = [
-    '@PSR2' => true,
-    'blank_line_after_opening_tag' => true,
-    'braces' => [
-        'allow_single_line_closure' => true,
-    ],
-    'compact_nullable_typehint' => true,
+    '@PSR12' => true,
+    '@PSR12:risky' => true,
     'concat_space' => [
         'spacing' => 'one',
     ],
-    'declare_equal_normalize' => [
-        'space' => 'none',
-    ],
     'function_typehint_space' => true,
-    'new_with_braces' => true,
-    'method_argument_space' => [
-        'on_multiline' => 'ensure_fully_multiline',
-    ],
-    'no_empty_statement' => true,
-    'no_leading_import_slash' => true,
     'no_leading_namespace_whitespace' => true,
-    'no_whitespace_in_blank_line' => true,
-    'return_type_declaration' => [
-        'space_before' => 'none',
-    ],
-    'single_trait_insert_per_statement' => true,
 ];
 
 // StyleCI Laravel Preset
@@ -49,18 +41,33 @@ $psr12Rules = [
 
 $laravelRules = [
     // align_phpdoc
-    // NOTE: not found
+    'align_multiline_comment' => [
+        'comment_type' => 'phpdocs_like',
+    ],
 
     // alpha_ordered_imports
     'ordered_imports' => [
-        'sortAlgorithm' => 'alpha',
+        'sort_algorithm' => 'alpha',
     ],
 
     // array_indentation
     'array_indentation' => true,
 
     // binary_operator_spaces
-    'binary_operator_spaces' => true,
+    'binary_operator_spaces' => [
+        'default' => 'single_space',
+        // equivalent to not having the align_double_arrow
+        // or unalign_double_arrow rule enabled
+        'operators' => [
+            '=>' => null,
+        ],
+    ],
+
+    // blank_line_after_namespace
+    // NOTE: same as PSR-12
+
+    // blank_line_after_opening_tag
+    // NOTE: same as PSR-12
 
     // blank_line_before_return
     'blank_line_before_statement' => [
@@ -72,11 +79,41 @@ $laravelRules = [
     // cast_spaces
     'cast_spaces' => true,
 
+    // class_definition
+    // NOTE: same as PSR-12
+
+    // clean_namespace
+    'clean_namespace' => true,
+
+    // compact_nullable_typehint
+    // NOTE: same as PSR-12
+
     // concat_without_spaces
     // NOTE: follow PSR-12
     // 'concat_space' => [
     //     'spacing' => 'none',
     // ],
+
+    // declare_equal_normalize
+    // NOTE: same as PSR-12
+
+    // die_to_exit
+    'no_alias_language_construct_call' => true,
+
+    // elseif
+    // NOTE: same as PSR-12
+
+    // encoding
+    // NOTE: same as PSR-12
+
+    // full_opening_tag
+    // NOTE: same as PSR-12
+
+    // function_declaration
+    // NOTE: same as PSR-12
+
+    // function_typehint_space
+    // NOTE: same as PSR-12
 
     // hash_to_slash_comment
     'single_line_comment_style' => [
@@ -91,11 +128,23 @@ $laravelRules = [
     // include
     'include' => true,
 
+    // indentation
+    // NOTE: same as PSR-12
+
+    // laravel_braces
+    // NOTE: follow PSR-12
+
     // lowercase_cast
-    'lowercase_cast' => true,
+    // NOTE: same as PSR-12
+
+    // lowercase_constants
+    // NOTE: same as PSR-12
+
+    // lowercase_keywords
+    // NOTE: same as PSR-12
 
     // lowercase_static_reference
-    'lowercase_static_reference' => true,
+    // NOTE: same as PSR-12
 
     // magic_constant_casing
     'magic_constant_casing' => true,
@@ -109,9 +158,12 @@ $laravelRules = [
     // method_separation
     'class_attributes_separation' => [
         'elements' => [
-            'method',
+            'method' => 'one',
         ],
     ],
+
+    // method_visibility_required
+    // NOTE: same as PSR-12
 
     // native_function_casing
     'native_function_casing' => true,
@@ -119,47 +171,62 @@ $laravelRules = [
     // native_function_type_declaration_casing
     'native_function_type_declaration_casing' => true,
 
-    // no_alias_functions
-    'no_alias_functions' => true,
+    // no_alternative_syntax
+    'no_alternative_syntax' => true,
+
+    // no_binary_string
+    'no_binary_string' => true,
 
     // no_blank_lines_after_class_opening
-    'no_blank_lines_after_class_opening' => true,
+    // NOTE: same as PSR-12
 
     // no_blank_lines_after_phpdoc
     'no_blank_lines_after_phpdoc' => true,
 
     // no_blank_lines_after_throw
-    // NOTE: not found
-
     // no_blank_lines_between_imports
     // no_blank_lines_between_traits
     'no_extra_blank_lines' => [
         'tokens' => [
             'extra',
+            'throw',
             'use',
             'use_trait',
         ],
     ],
 
+    // no_closing_tag
+    'no_closing_tag' => true,
+
     // no_empty_phpdoc
     'no_empty_phpdoc' => true,
 
+    // no_empty_statement
+    'no_empty_statement' => true,
+
     // no_extra_consecutive_blank_lines
     // NOTE: no_extra_blank_lines
+
+    // no_leading_import_slash
+    // NOTE: same as PSR-12
+
+    // no_leading_namespace_whitespace
+    // NOTE: same as PSR-12
 
     // no_multiline_whitespace_around_double_arrow
     'no_multiline_whitespace_around_double_arrow' => true,
 
     // no_multiline_whitespace_before_semicolons
-    'multiline_whitespace_before_semicolons' => [
-        'strategy' => 'no_multi_line',
-    ],
+    'multiline_whitespace_before_semicolons' => true,
 
     // no_short_bool_cast
     'no_short_bool_cast' => true,
 
     // no_singleline_whitespace_before_semicolons
     'no_singleline_whitespace_before_semicolons' => true,
+
+    // no_spaces_after_function_name
+    // NOTE: same as PSR-12
 
     // no_spaces_inside_offset
     'no_spaces_around_offset' => [
@@ -168,11 +235,20 @@ $laravelRules = [
         ],
     ],
 
+    // no_spaces_inside_parenthesis
+    // NOTE: same as PSR-12
+
     // no_trailing_comma_in_list_call
     'no_trailing_comma_in_list_call' => true,
 
     // no_trailing_comma_in_singleline_array
     'no_trailing_comma_in_singleline_array' => true,
+
+    // no_trailing_whitespace
+    // NOTE: same as PSR-12
+
+    // no_trailing_whitespace_in_comment
+    // NOTE: same as PSR-12
 
     // no_unneeded_control_parentheses
     'no_unneeded_control_parentheses' => true,
@@ -180,17 +256,23 @@ $laravelRules = [
     // no_unneeded_curly_braces
     'no_unneeded_curly_braces' => true,
 
-    // no_unreachable_default_argument_value
-    'no_unreachable_default_argument_value' => true,
+    // no_unset_cast
+    'no_unset_cast' => true,
 
     // no_unused_imports
     'no_unused_imports' => true,
+
+    // no_unused_lambda_imports
+    'lambda_not_used_import' => true,
 
     // no_useless_return
     'no_useless_return' => true,
 
     // no_whitespace_before_comma_in_array
     'no_whitespace_before_comma_in_array' => true,
+
+    // no_whitespace_in_blank_line
+    // NOTE: same as PSR-12
 
     // normalize_index_brace
     'normalize_index_brace' => true,
@@ -204,8 +286,8 @@ $laravelRules = [
     // phpdoc_indent
     'phpdoc_indent' => true,
 
-    // phpdoc_inline_tag
-    'phpdoc_inline_tag' => true,
+    // phpdoc_inline_tag_normalizer
+    'phpdoc_inline_tag_normalizer' => true,
 
     // phpdoc_no_access
     'phpdoc_no_access' => true,
@@ -216,11 +298,17 @@ $laravelRules = [
     // phpdoc_no_useless_inheritdoc
     'phpdoc_no_useless_inheritdoc' => true,
 
+    // phpdoc_return_self_reference
+    'phpdoc_return_self_reference' => true,
+
     // phpdoc_scalar
     'phpdoc_scalar' => true,
 
     // phpdoc_single_line_var_spacing
     'phpdoc_single_line_var_spacing' => true,
+
+    // phpdoc_singular_inheritdoc
+    'phpdoc_no_useless_inheritdoc' => true,
 
     // phpdoc_summary
     'phpdoc_summary' => true,
@@ -251,8 +339,11 @@ $laravelRules = [
         'use' => 'echo',
     ],
 
-    // self_accessor
-    'self_accessor' => true,
+    // property_visibility_required
+    // NOTE: same as PSR-12
+
+    // return_type_declaration
+    // NOTE: same as PSR-12
 
     // short_array_syntax
     'array_syntax' => [
@@ -265,13 +356,22 @@ $laravelRules = [
     ],
 
     // short_scalar_cast
-    'short_scalar_cast' => true,
+    // NOTE: same as PSR-12
 
-    // simplified_null_return
-    'simplified_null_return' => true,
+    // single_blank_line_at_eof
+    // NOTE: same as PSR-12
 
     // single_blank_line_before_namespace
-    'single_blank_line_before_namespace' => true,
+    // NOTE: same as PSR-12
+
+    // single_class_element_per_statement
+    // NOTE: same as PSR-12
+
+    // single_import_per_statement
+    // NOTE: same as PSR-12
+
+    // single_line_after_imports
+    // NOTE: same as PSR-12
 
     // single_quote
     'single_quote' => true,
@@ -282,8 +382,17 @@ $laravelRules = [
     // standardize_not_equals
     'standardize_not_equals' => true,
 
+    // switch_case_semicolon_to_colon
+    // NOTE: same as PSR-12
+
+    // switch_case_space
+    // NOTE: same as PSR-12
+
+    // switch_continue_to_break
+    'switch_continue_to_break' => true,
+
     // ternary_operator_spaces
-    'ternary_operator_spaces' => true,
+    // NOTE: same as PSR-12
 
     // trailing_comma_in_multiline_array
     'trailing_comma_in_multiline_array' => true,
@@ -292,20 +401,34 @@ $laravelRules = [
     'trim_array_spaces' => true,
 
     // unalign_equals
-    'binary_operator_spaces' => [
-        'align_double_arrow' => null,
-        'align_equals' => false,
-    ],
+    // NOTE: with binary_operator_spaces
 
     // unary_operator_spaces
     'unary_operator_spaces' => true,
 
+    // unix_line_endings
+    // NOTE: same as PSR-12
+
     // whitespace_after_comma_in_array
     'whitespace_after_comma_in_array' => true,
+
+    // no_alias_functions
+    'no_alias_functions' => true,
+
+    // no_unreachable_default_argument_value
+    'no_unreachable_default_argument_value' => true,
+
+    // psr4
+    'psr_autoloading' => true,
+
+    // self_accessor
+    'self_accessor' => true,
 ];
 
 $rules = array_merge($psr12Rules, $laravelRules);
 
-return PhpCsFixer\Config::create()
+return (new Config())
     ->setRules($rules)
-    ->setFinder($finder);
+    ->setFinder($finder)
+    ->setRiskyAllowed(true)
+    ->setUsingCache(true);
